--- a/env.example
+++ b/env.example
@@ -14,7 +14,7 @@ MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
 
 # CORS Configuration
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://rfp-fe-nextjs-bh37l8vqz-sumitjaini1998gmailcoms-projects.vercel.app
 
 # Rate Limiting
 RATE_LIMIT_WINDOW=15
