--- a/env.example
+++ b/env.example
@@ -3,7 +3,7 @@ PORT=8000
 NODE_ENV=development
 
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/rfp_management
+MONGODB_URI=mongodb+srv://sumit:sumit123@cluster0.orpkpgr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
